--- a/citizen-facing-architecture.html
+++ b/citizen-facing-architecture.html
@@ -11,13 +11,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/govuk-frontend@5.13.0/dist/govuk/govuk-frontend.min.css">
 
     <style>
+        :root{
+            --govuk-blue: #1d70b8;
+            --govuk-blue-ink: #1d70b8;
+            --govuk-black: #0b0c0c;
+            --govuk-border: #b1b4b6;
+            --govuk-panel: #f3f2f1;
+            --white: #ffffff;
+        }
+
         .app-content-wrapper {
             display: flex;
             min-height: calc(100vh - 300px);
         }
         .app-sidebar {
-            background: #f3f2f1;
-            border-right: 1px solid #b1b4b6;
+            background: var(--govuk-panel);
+            border-right: 1px solid var(--govuk-border);
             width: 220px;
             padding: 20px;
         }
@@ -25,6 +34,8 @@
             flex: 1;
             padding: 30px 40px;
         }
+
+        /* Diagram layout */
         .architecture-diagram {
             display: grid;
             grid-template-columns: 220px auto;
@@ -33,7 +44,7 @@
             align-items: center;
         }
         .govuk-heading-m.layer-title {
-            color: #1d70b8;
+            color: var(--govuk-blue);
             margin-top: auto;
             margin-bottom: auto;
         }
@@ -42,35 +53,78 @@
             flex-wrap: wrap;
             gap: 8px;
         }
+
+        /* Base box */
         .architecture-box {
             flex: 1;
             min-width: 160px;
-            background: #1d70b8;
-            color: #fff;
             text-align: center;
             padding: 18px;
             font-family: "GDS Transport", Arial, sans-serif;
             font-weight: 700;
             font-size: 16px;
-            transition: background-color 0.2s ease-in-out;
+            border-radius: 0;
+            border: 2px solid transparent;
+            transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, border-color 0.2s ease-in-out;
         }
         .architecture-box a {
-            color: #fff;
             text-decoration: none;
             display: block;
         }
         .architecture-box:hover {
             filter: brightness(115%);
         }
-        .architecture-box:hover a {
-            text-decoration: underline;
+        .architecture-box a:focus,
+        .architecture-box a:focus-visible {
+            outline: 3px solid #fd0; /* GOV.UK focus yellow */
+            outline-offset: 2px;
+            text-decoration: none;
         }
-        /* Colour variations */
-        .layer-interaction { background: #4c2c92; }
-        .layer-business { background: #28a197; }
-        .layer-data { background: #d4351c; }
-        .layer-exchange { background: #f47738; }
-        .layer-cloud { background: #0b0c0c; }
+
+        /* ===== Alternating layer colours =====
+           Odd layers (1,3,5): Blue box, white text
+           Even layers (2,4):  White box, blue text, blue border
+        */
+        /* Layer 1: Blue */
+        .layer-1 .architecture-box {
+            background: var(--govuk-blue);
+            color: var(--white);
+        }
+        .layer-1 .architecture-box a { color: var(--white); }
+
+        /* Layer 2: White with blue text/border */
+        .layer-2 .architecture-box {
+            background: var(--white);
+            color: var(--govuk-blue-ink);
+            border-color: var(--govuk-blue);
+        }
+        .layer-2 .architecture-box a { color: var(--govuk-blue-ink); }
+        .layer-2 .architecture-box:hover { filter: none; background: #eef5fb; } /* subtle hover */
+
+        /* Layer 3: Blue */
+        .layer-3 .architecture-box {
+            background: var(--govuk-blue);
+            color: var(--white);
+        }
+        .layer-3 .architecture-box a { color: var(--white); }
+
+        /* Layer 4: White with blue text/border */
+        .layer-4 .architecture-box {
+            background: var(--white);
+            color: var(--govuk-blue-ink);
+            border-color: var(--govuk-blue);
+        }
+        .layer-4 .architecture-box a { color: var(--govuk-blue-ink); }
+        .layer-4 .architecture-box:hover { filter: none; background: #eef5fb; }
+
+        /* Layer 5: Blue */
+        .layer-5 .architecture-box {
+            background: var(--govuk-blue);
+            color: var(--white);
+        }
+        .layer-5 .architecture-box a { color: var(--white); }
+
+        /* Navigation */
         .app-service-nav__list {
             display: flex;
             list-style: none;
@@ -81,12 +135,15 @@
         .app-service-nav__link {
             font-size: 19px;
             font-weight: 600;
-            color: #1d70b8;
+            color: var(--govuk-blue);
             text-decoration: none;
         }
         .app-service-nav__link:hover {
             text-decoration: underline;
         }
+
+        /* Remove old per-layer colours that conflict */
+        /* .layer-interaction, .layer-business, .layer-data, .layer-exchange, .layer-cloud { } */
     </style>
 </head>
 <body class="govuk-template__body">
@@ -159,8 +216,9 @@
 
         <!-- Architecture Diagram -->
         <div class="architecture-diagram">
+            <!-- Layer 1 -->
             <div class="govuk-heading-m layer-title">Citizen Facing Digital Channels</div>
-            <div class="architecture-row">
+            <div class="architecture-row layer-1">
                 <div class="architecture-box"><a href="#">GOV.UK Websites</a></div>
                 <div class="architecture-box"><a href="#">GOV.UK Notify</a></div>
                 <div class="architecture-box"><a href="#">GOV.UK Mobile App</a></div>
@@ -168,35 +226,39 @@
                 <div class="architecture-box"><a href="#">Third Party Solutions</a></div>
             </div>
 
+            <!-- Layer 2 -->
             <div class="govuk-heading-m layer-title">Interaction Layer</div>
-            <div class="architecture-row">
-                <div class="architecture-box layer-interaction"><a href="#">GOV.UK Digital Backbone</a></div>
-                <div class="architecture-box layer-interaction"><a href="#">GOV.UK Forms</a></div>
-                <div class="architecture-box layer-interaction"><a href="#">GOV.UK OneLogin</a></div>
-                <div class="architecture-box layer-interaction"><a href="#">GOV.UK Pay</a></div>
-                <div class="architecture-box layer-interaction"><a href="#">Public Sector APIs</a></div>
+            <div class="architecture-row layer-2">
+                <div class="architecture-box"><a href="#">GOV.UK Digital Backbone</a></div>
+                <div class="architecture-box"><a href="#">GOV.UK Forms</a></div>
+                <div class="architecture-box"><a href="#">GOV.UK OneLogin</a></div>
+                <div class="architecture-box"><a href="#">GOV.UK Pay</a></div>
+                <div class="architecture-box"><a href="#">Public Sector APIs</a></div>
             </div>
 
+            <!-- Layer 3 -->
             <div class="govuk-heading-m layer-title">Business Logic</div>
-            <div class="architecture-row">
-                <div class="architecture-box layer-business"><a href="#">HMRC Tax System</a></div>
-                <div class="architecture-box layer-business"><a href="#">DVLA Drivers System</a></div>
-                <div class="architecture-box layer-business"><a href="#">DEFRA Grants</a></div>
-                <div class="architecture-box layer-business"><a href="#">HMPO Passport</a></div>
-                <div class="architecture-box layer-business"><a href="#">MoJ Justice Services</a></div>
+            <div class="architecture-row layer-3">
+                <div class="architecture-box"><a href="#">HMRC Tax System</a></div>
+                <div class="architecture-box"><a href="#">DVLA Drivers System</a></div>
+                <div class="architecture-box"><a href="#">DEFRA Grants</a></div>
+                <div class="architecture-box"><a href="#">HMPO Passport</a></div>
+                <div class="architecture-box"><a href="#">MoJ Justice Services</a></div>
             </div>
 
+            <!-- Layer 4 -->
             <div class="govuk-heading-m layer-title">Data Layer</div>
-            <div class="architecture-row">
-                <div class="architecture-box layer-data"><a href="#">GOV.UK CMS</a></div>
-                <div class="architecture-box layer-data"><a href="#">Data Marketplace</a></div>
-                <div class="architecture-box layer-data"><a href="#">Public Sector Data Stores</a></div>
+            <div class="architecture-row layer-4">
+                <div class="architecture-box"><a href="#">GOV.UK CMS</a></div>
+                <div class="architecture-box"><a href="#">Data Marketplace</a></div>
+                <div class="architecture-box"><a href="#">Public Sector Data Stores</a></div>
             </div>
 
+            <!-- Layer 5 -->
             <div class="govuk-heading-m layer-title">Infrastructure</div>
-            <div class="architecture-row">
-                <div class="architecture-box layer-cloud"><a href="#">National Digital Exchange (Planned)</a></div>
-                <div class="architecture-box layer-cloud"><a href="#">Cloud Services (Planned)</a></div>
+            <div class="architecture-row layer-5">
+                <div class="architecture-box"><a href="#">National Digital Exchange (Planned)</a></div>
+                <div class="architecture-box"><a href="#">Cloud Services (Planned)</a></div>
             </div>
         </div>
     </main>
@@ -216,3 +278,4 @@
 </script>
 </body>
 </html>
+``
